@@ -1,3 +1,6 @@
+  27 Aug 2013; Alon Bar-Lev <alonbl@redhat.com> ovirt-engine-9999.ebuild:
+  Update otopi, ovirt-host-deploy dependencies
+
   18 Aug 2013; Alon Bar-Lev <alonbl@gentoo.org> ovirt-engine-9999.ebuild:
   sync with upstream
 
